--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Jamil",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
     "validator": "^13.1.1"
